Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.11.0-rc1
-
None
-
e3d8c97998102ed620a539410c1440d4ba04e34a (qt-creator/qt-creator/master)
Description
With environment variable QT_LOGGING_RULES set to qtc.android.*=true, we can see a couple of things that happen in the Android plugin under the hood. When opening a projetc, we see this output:
qtc.android.sdkManager: SDK-tools: Parsing failed. Minimum required data unavailable: (" tools Revision 25.3") qtc.android.sdkManager: Extra-tools: Parsing failed. Minimum required data unavailable: (" extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.0") qtc.android.sdkManager: Extra-tools: Parsing failed. Minimum required data unavailable: (" extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.0-alpha4") qtc.android.sdkManager: Extra-tools: Parsing failed. Minimum required data unavailable: (" extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.0-alpha8") qtc.android.sdkManager: Extra-tools: Parsing failed. Minimum required data unavailable: (" extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.0-beta1") qtc.android.sdkManager: Extra-tools: Parsing failed. Minimum required data unavailable: (" extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.0-beta2") qtc.android.sdkManager: Extra-tools: Parsing failed. Minimum required data unavailable: (" extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.0-beta3") qtc.android.sdkManager: Extra-tools: Parsing failed. Minimum required data unavailable: (" extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.0-beta4") qtc.android.sdkManager: Extra-tools: Parsing failed. Minimum required data unavailable: (" extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.0-beta5") qtc.android.sdkManager: Extra-tools: Parsing failed. Minimum required data unavailable: (" extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.1") qtc.android.sdkManager: Extra-tools: Parsing failed. Minimum required data unavailable: (" extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.2") qtc.android.sdkManager: Emulator-tools: Parsing failed. Minimum required data unavailable: (" emulator Revision 26.1.3") qtc.android.sdkManager: Emulator-tools: Parsing failed. Minimum required data unavailable: (" emulator Revision 26.1.3") qtc.android.sdkManager: Emulator-tools: Parsing failed. Minimum required data unavailable: (" emulator Revision 26.1.3") qtc.android.sdkManager: Emulator-tools: Parsing failed. Minimum required data unavailable: (" emulator Revision 26.1.3") qtc.android.sdkManager: Emulator-tools: Parsing failed. Minimum required data unavailable: (" emulator Revision 27.1.7") qtc.android.sdkManager: Emulator-tools: Parsing failed. Minimum required data unavailable: (" emulator Revision 26.1.3") qtc.android.sdkManager: Emulator-tools: Parsing failed. Minimum required data unavailable: (" emulator Revision 29.1.12") qtc.android.sdkManager: Emulator-tools: Parsing failed. Minimum required data unavailable: (" emulator Revision 27.1.7") qtc.android.sdkManager: Emulator-tools: Parsing failed. Minimum required data unavailable: (" emulator Revision 29.1.12") qtc.android.sdkManager: Emulator-tools: Parsing failed. Minimum required data unavailable: (" emulator Revision 27.1.7") qtc.android.sdkManager: Extra-tools: Parsing failed. Minimum required data unavailable: (" extras;intel;Hardware_Accelerated_Execution_Manager Revision 7.5.2") qtc.android.sdkManager: Extra-tools: Parsing failed. Minimum required data unavailable: (" extras;intel;Hardware_Accelerated_Execution_Manager Revision 7.5.2") qtc.android.sdkManager: Emulator-tools: Parsing failed. Minimum required data unavailable: (" emulator Revision 28.1.9") qtc.android.sdkManager: Emulator-tools: Parsing failed. Minimum required data unavailable: (" emulator Revision 28.1.9") qtc.android.sdkManager: Extra-tools: Parsing failed. Minimum required data unavailable: (" extras;intel;Hardware_Accelerated_Execution_Manager Revision 7.5.2") qtc.android.sdkManager: Extra-tools: Parsing failed. Minimum required data unavailable: (" extras;intel;Hardware_Accelerated_Execution_Manager Revision 7.5.2") qtc.android.sdkManager: System-image: Cannot parse api level: ("system-images;android-Q;android-tv;x86", " Description: Android TV Intel x86 Atom System Image", " Version: 1", " Dependencies:", " patcher;v4") qtc.android.sdkManager: Emulator-tools: Parsing failed. Minimum required data unavailable: (" emulator") qtc.android.sdkManager: Platform-tools: Parsing failed. Minimum required data unavailable: (" platform-tools Revision 20") qtc.android.sdkManager: Emulator-tools: Parsing failed. Minimum required data unavailable: ("emulator", " Installed Version: 29.2.1", " Available Version: 29.2.11") qtc.android.sdkManager: Extra-tools: Parsing failed. Minimum required data unavailable: ("extras;intel;Hardware_Accelerated_Execution_Manager", " Installed Version: 7.5.2", " Available Version: 7.5.4") SOFT ASSERT: "node" in file C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\src\plugins\android\androidextralibrarylistmodel.cpp, line 90 SOFT ASSERT: "node" in file C:\Users\alportal\dev\tqtc-qtc-super\qtcreator\src\plugins\android\androidextralibrarylistmodel.cpp, line 90
See the attached sdkmanager_list.txt for what the plugin tries to parse.
Attachments
Issue Links
- resulted in
-
QTCREATORBUG-23321 Android: Remove self-implemented SDK Manager frontend and refer to Android Studio
-
- Closed
-