Android: Fix sdkmanager package dependencies parse error

Fixes: QTCREATORBUG-23324
Change-Id: I14829277cc3a121af7da53ecc3bd18d34c0fcc65
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>